# Noirify

./: .gitignore  CMakeLists.txt  README.md
processors/asm/: noirify_simd.S  noirify_simd.h
processors/cpp/: noirify_cpp.cpp  noirify_cpp.h
processors/python/: noirify.py
resources/: resources.qrc  styles.qss
src/: MainWindow.cpp  MainWindow.h  main.cpp
